@@ -7,4 +7,3 @@
   Name:         rquota
   Version:      1.9
   Release:	1
-  Pre_exec:     "./bootstrap && ./configure"
