@@ -34,18 +34,12 @@ Quotas are reported in human-readable units: 'K', 'M', and 'T' bytes.
 %configure
 %endif
 make
+make check
 
 %install
 rm -rf $RPM_BUILD_ROOT
-mkdir -p $RPM_BUILD_ROOT%{_bindir}
-mkdir -p $RPM_BUILD_ROOT%{_mandir}/man1
-mkdir -p $RPM_BUILD_ROOT%{_mandir}/man5
-
-cp quota $RPM_BUILD_ROOT%{_bindir}
-cp repquota $RPM_BUILD_ROOT%{_bindir}
-cp quota.1 $RPM_BUILD_ROOT%{_mandir}/man1
-cp repquota.1 $RPM_BUILD_ROOT%{_mandir}/man1
-cp quota.conf.5 $RPM_BUILD_ROOT%{_mandir}/man5
+mkdir -p $RPM_BUILD_ROOT
+make install DESTDIR=$RPM_BUILD_ROOT
 
 %clean
 rm -rf "$RPM_BUILD_ROOT"
